<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context="com.ting199708.transport.MainActivity"
    android:background="#F2DDDE"
    android:paddingTop="16dp" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:src="@drawable/back"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:text="@string/recent"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button8"
        android:layout_marginTop="3dp"
        android:background="@drawable/button"
        android:text="@string/e04a"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/_7a"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/linearLayout1"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="3dp"
        android:background="@drawable/button"
        android:text="@string/school"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginStart="22dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/button2"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/toChiaChang"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/toNKNU"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout1"
        android:layout_below="@+id/button2"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/toHePing"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/toYanChao"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:paddingTop="10dp"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/button5"
        android:paddingBottom="3dp"
        tools:ignore="UnknownIdInLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:visibility="visible"
            android:contentDescription="@string/s1"/>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/progessLayout">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progessBar"
            android:indeterminate="true"
            android:layout_centerInParent="true"/>
        <TextView
            android:text="更新中..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progessBar"
            android:id="@+id/textView1"
            android:textColor="#000000"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>
